--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -90,6 +90,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:autofillHints=""
+        android:maxLength="11"
         android:hint="@string/Вводт"
         android:inputType="phone"
         app:layout_constraintStart_toEndOf="@+id/textView7"
